--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 apiview==1.3.25
 appdirs==1.4.3
 asgiref==3.3.1
+beautifulsoup4==4.9.3
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -19,8 +20,10 @@ html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
+lxml==4.6.2
 MarkupPy==1.14
 msgpack==0.6.2
+mysqlclient==2.0.3
 odfpy==1.4.1
 openpyxl==3.0.7
 packaging==20.3
@@ -33,6 +36,7 @@ PyYAML==5.4.1
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
+soupsieve==2.2
 sqlparse==0.4.1
 tablib==3.0.0
 urllib3==1.25.8
